[gd_scene load_steps=7 format=3 uid="uid://dwiyuhhbhjmel"]

[ext_resource type="PackedScene" uid="uid://buyimcv31p0ic" path="res://3d_plane/messershmit_bf-109/scene_messer.gltf" id="1_0hyxc"]
[ext_resource type="Script" path="res://scene_messer.gd" id="2_5lphr"]
[ext_resource type="AudioStream" uid="uid://f6qitopbfdum" path="res://son/song_bomber.mp3" id="3_jo6rs"]
[ext_resource type="PackedScene" uid="uid://i7y8ar6obwd2" path="res://petit_feu.tscn" id="4_tslt2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gexl0"]
radius = 96.3651
height = 903.797

[sub_resource type="BoxShape3D" id="BoxShape3D_dt48x"]
size = Vector3(201.964, 102.125, 989.89)

[node name="scene_messer" instance=ExtResource("1_0hyxc")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
script = ExtResource("2_5lphr")

[node name="Skeleton3D" parent="Sketchfab_model/root/GLTF_SceneRootNode/Sketchfab_model_0/31a7101f3cf045dc9b06834d619f0f7ffbx_1/Object_2_2/RootNode_3/Object_4_4/GLTF_created_0" index="0"]
bones/3/rotation = Quaternion(0, 0.699626, 0, 0.71451)
bones/4/rotation = Quaternion(-1.22465e-16, 0, 0, 1)
bones/5/scale = Vector3(1, 1, 1)
bones/6/scale = Vector3(0.01, 0.01, 0.01)
bones/7/rotation = Quaternion(0.743145, 0, 0, 0.669131)
bones/9/rotation = Quaternion(-0.743145, 0, 0, 0.669131)

[node name="AnimationPlayer" parent="." index="1"]
speed_scale = 32.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="2"]
stream = ExtResource("3_jo6rs")
volume_db = -12.0
pitch_scale = 2.0

[node name="Area3D" type="Area3D" parent="." index="3"]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(0.082182, -0.996617, 0, 0.996618, 0.082182, 0, 0, 0, 1, 17.1723, -112.985, 0.488883)
shape = SubResource("CapsuleShape3D_gexl0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 143.791, -152.679, -1.62025)
shape = SubResource("BoxShape3D_dt48x")

[node name="petit_feu" parent="." index="4" instance=ExtResource("4_tslt2")]
transform = Transform3D(-6.55671e-10, 0.015, -6.55671e-10, 0, -6.55671e-10, -0.015, -0.015, -6.55671e-10, 2.86603e-17, -143.103, 0.0857911, -1.96784)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
